--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<canvas id="canvas" style ="border: 15px solid blueviolet ; background-color: rgba(255, 255, 255, 0.979); box-shadow: 2px 1px 14px 2px rgb(214, 209, 209); "></canvas>
+<canvas id="canvas" style ="border: 15px solid rgb(125, 36, 209) ; background-color: rgba(255, 255, 255, 0.979); box-shadow: 2px 1px 14px 2px rgb(214, 209, 209); "></canvas>
 <div class="tools">
 
 <button id="clear" type="button" onclick="clear()" >Clear</button>
@@ -18,6 +18,8 @@
 <div onclick="change_color(this)" class="color_palete" style="background: rgb(66, 174, 236);"></div>
 <div onclick="change_color(this)" class="color_palete" style="background: rgb(255, 62, 223);"></div>
 <div onclick="change_color(this)" class="color_palete" style="background: rgb(40, 224, 65);"></div>
+<div onclick="change_color(this)" class="color_palete" style="background: rgb(208, 53, 255);"></div>
+<div onclick="change_color(this)" class="color_palete" style="background: rgb(224, 62, 40);"></div>
 
 <input oninput="draw_color = this.value" type="color" class="color_box">
 <input oninput="draw_width = this.value" type="range" class="pen_range">
