--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 
-<canvas id="canvas" style ="border: 15px solid rgb(125, 36, 209) ; background-color: rgba(255, 255, 255, 0.979); box-shadow: 2px 1px 14px 2px rgb(214, 209, 209); "></canvas>
+<canvas id="canvas" style ="border: 15px solid rgb(125, 36, 209) ; background-color: white; box-shadow: 2px 1px 14px 2px rgb(214, 209, 209); "></canvas>
 <div class="tools">
 
-<button id="clear" type="button" onclick="clear()" >Clear</button>
+<button id="clear" type="button" onkeydown="clear()" >Clear</button>
 <button id="erase" >erase</button>
 
 <div onclick="change_color(this)" class="color_palete" style="background: rgb(66, 174, 236);"></div>
