--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <input oninput="draw_color = this.value" type="color" class="color_box">
 <input oninput="draw_width = this.value" type="range" class="pen_range">
-<i class="far fa-lightbulb fa-2x " id="bulb"></i>
+<!-- <i class="far fa-lightbulb fa-2x " id="bulb"></i> -->
 </div>
 <div class="btn">
     
